# efi-playground

./: .gitignore  CMakeLists.txt
configurations/frankenso/: CMakeLists.txt
configurations/tester/: CMakeLists.txt  main.cpp
feature/can/: CMakeLists.txt
feature/can/include/can/: CanInterface.h  CanRemoteSensor.h  can.h
feature/can/src/: CanRemoteSensor.cpp  stub.cpp
feature/core/: CMakeLists.txt
feature/core/include/core/: Types.h
feature/core/include/core/config/: ConfigField.h
feature/core/include/core/fuel/: InjectionController.h
feature/core/include/core/math/: Quantity.h  Table.h
feature/core/include/core/sensors/: ISensor.h
feature/core/src/: Table.cpp
feature/gasoline/: CMakeLists.txt
feature/gasoline/include/: Engine.h
feature/gasoline/include/gasoline/: GasolineEngine.h  GasolineFuelComputer.h  GasolineInjectionController.h  IAirflowEstimator.h  MassAirFlow.h  SpeedDensity.h
feature/gasoline/src/: GasolineEngine.cpp  GasolineFuelComputer.cpp  InjectionController.cpp  MassAirFlow.cpp  SpeedDensity.cpp
test/: CMakeLists.txt  Gasoline.cpp  main.cpp
test/config/: ConfigTest.cpp
test/fuel/: FuelComputer.cpp  MassAirFlow.cpp  SpeedDensity.cpp
